Functionality and interface finished. Interface could use some prettifying, but looks fine for proof of concept

--- a/style.css
+++ b/style.css
@@ -18,13 +18,15 @@ body {
 }
 
 .game {
-    background-color: #002b36;
+    z-index: 10;
+    background-color: #fdf6e3;
     border-radius: 20px;
     margin-top: 100px;
     width: 720px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: opacity 0.5s;
 }
 
 .game .container {
@@ -53,8 +55,8 @@ body {
     justify-content: center;
     gap: 50px;
     padding-top: 20px;
+    padding-bottom: 10px;
     margin: auto;
-    margin-bottom: 20px;
     width: 300px;
 }
 
@@ -67,7 +69,7 @@ body {
 }
 
 .score {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     color: #2aa198;
     -webkit-text-stroke-width: 0.4px;
@@ -75,7 +77,7 @@ body {
 }
 
 .choicecontainer {
-    color: #93a1a1;
+    color: #002b36;
     font-size: 20px;
     font-weight: bold;
     -webkit-text-stroke-width: 0.2px;
@@ -86,7 +88,6 @@ body {
 }
 
 .choicecontainer .choices {
-    color: #dc322f;
     font-size: 20px;
     font-weight: bold;
     -webkit-text-stroke-width: 0.2px;
@@ -95,7 +96,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 10px;
+    gap: 15px;
     margin-bottom: 20px;
 }
 
@@ -103,8 +104,15 @@ body {
     padding: 5px;
 }
 
+.hideme {
+    /* visibility: hidden; */
+}
+
 .results .choices {
-    color: #268bd2;
+    color: #002b36;
+    background-color: #fdf6e3;
+    border-radius: 20px;
+    padding: 5px;
     font-size: 20px;
     font-weight: bold;
     -webkit-text-stroke-width: 0.2px;
@@ -130,8 +138,30 @@ body {
 }
 
 .outcome {
-    font-size: 24px;
-    font-weight: bold;
+    color: #002b36;
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.match {
+    z-index: 9;
+    background-color: #fdf6e3;
+    color: #002b36;
+    font-size: 48px;
+    font-weight: bolder;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -75px;
+    margin-left: -250px;
+    width: 500px;
+    height: 150px;
+    opacity: 0;
+    transition: opacity 1s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer {
@@ -160,7 +190,7 @@ img {
     width: 200px;
 }
 
-button {
+.button {
     background-color: #eee8d5;
     border: 0px;
     border-radius: 20px;
@@ -172,12 +202,12 @@ button {
     -webkit-text-stroke-color: black;
 }
 
-button:hover{
+.button:hover{
     transition: transform .2s;
     transform: scale(1.1);
 }
 
-button:active{
+.button:active{
     transition: transform .1s;
     transform: scale(1);
 }
